hash-reader/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hashes
        pathType: Prefix
        backend:
          service:
            name: hashes-svc
            port: 
              number: 2245
